[gd_scene load_steps=6 format=3 uid="uid://de73qrhtkiaka"]

[ext_resource type="Script" uid="uid://chan7t6vhukc6" path="res://src/draft.gd" id="1_8dpj7"]

[sub_resource type="PlaneMesh" id="PlaneMesh_8dpj7"]
size = Vector2(0.5, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_8dpj7"]
viewport_path = NodePath("sub_viewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q33qg"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("ViewportTexture_8dpj7")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8dpj7"]
data = PackedVector3Array(0.25, 0, 0.25, -0.25, 0, 0.25, 0.25, 0, -0.25, -0.25, 0, 0.25, -0.25, 0, -0.25, 0.25, 0, -0.25)

[node name="draft" type="Node3D"]
script = ExtResource("1_8dpj7")

[node name="mesh_instance" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_8dpj7")
surface_material_override/0 = SubResource("StandardMaterial3D_q33qg")

[node name="area_3d" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="collision_shape" type="CollisionShape3D" parent="area_3d"]
shape = SubResource("ConcavePolygonShape3D_8dpj7")

[node name="sub_viewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(384, 512)
